--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ProfNotes" parent="Theme.Material3.Dark.NoActionBar">
+    <style name="Theme.ProfNotes" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black_1C</item>
         <item name="colorPrimaryVariant">@color/grey_94</item>
