--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,6 @@
             android:id="@+id/ivUser"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="16dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_test_user"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,7 @@
             android:text="@string/text_view_greetings"
             android:textColor="@color/grey_89"
             app:layout_constraintStart_toEndOf="@+id/ivUser"
-            tools:layout_editor_absoluteY="16dp" />
+            tools:layout_editor_absoluteY="0dp" />
 
         <ImageView
             android:id="@+id/ivBull"
@@ -128,15 +127,13 @@
             app:layout_constraintTop_toBottomOf="@+id/edSearch"
             tools:layout_editor_absoluteX="0dp" />
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vpNewNotes"
             android:layout_width="match_parent"
             android:layout_height="136dp"
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/tvNewNotes"
             tools:layout_editor_absoluteX="0dp" />
-
-
 
         <TextView
             android:id="@+id/tvMyTasks"
@@ -147,7 +144,7 @@
             android:text="@string/textViewMyTasks"
             android:textAllCaps="true"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+            app:layout_constraintTop_toBottomOf="@+id/vpNewNotes" />
 
         <TextView
             android:id="@+id/tvAllTasks"
@@ -158,14 +155,16 @@
             android:text="@string/textViewAllTasks"
             android:textColor="@color/grey_89"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+            app:layout_constraintTop_toBottomOf="@+id/vpNewNotes" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMyTasks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@+id/tvMyTasks"
-            tools:layout_editor_absoluteX="-16dp" />
+            tools:layout_editor_absoluteX="-16dp"
+            tools:listitem="@layout/item_you_new"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
